# registration

./: .env.example  .gitignore  Makefile  pyproject.toml  requirements.txt
bot/management/commands/: run_bot.py
registration/: settings.py  urls.py  views.py
templates/: base.html  bot.html  create_user.html  login.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_telegramid_telegram_id.py
